intermediate/manifests/03-webapp-01.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app1
spec:
    replicas: 2
    selector:
        matchLabels:
            app: app1
    template:
        metadata:
            labels:
                app: app1
        spec:
            containers:
                - name: nginx
                  image: nginx:1.21
                  ports:
                      - containerPort: 80
                  volumeMounts:
                      - name: index
                        mountPath: /usr/share/nginx/html/index.html
                        subPath: index.html
            volumes:
                - name: index
                  configMap:
                      name: app1-index
---
apiVersion: v1
kind: Service
metadata:
    name: app1
spec:
    selector:
        app: app1
    ports:
        - port: 80
          targetPort: 80
